fix tab size on small resolution

--- a/src/css/_tabs.sass
+++ b/src/css/_tabs.sass
@@ -3,30 +3,33 @@ perg-com-tabs
   display: block
 
 .list--bare
-    list-style: outside none none
-    margin: 0px
-    padding: 0px
+  list-style: outside none none
+  margin: 0px
+  padding: 0px
 
 .tab
-    /* display: inline-block
-    /* vertical-align: middle
-    /* width: 200px
-    /* line-height: 45px
-    height: 60px
-    text-align: center
-    cursor: pointer
-    border: 1px solid
-    margin-bottom: -1px
-    margin-right: 0px
-    padding: 10px 0px
+  /* display: inline-block
+  /* vertical-align: middle
+  /* width: 200px
+  /* line-height: 45px
+  height: 60px
+  text-align: center
+  cursor: pointer
+  border: 1px solid
+  margin-bottom: -1px
+  margin-right: 0px
+  padding: 10px 0px
+  border-radius: 5px 5px 0px 0px
+  width: 50%
+  position: relative
+  float: left
+  .number
+    font-weight: bold
+  .block-decorator
+    width: 100%
+    background-color: $secondary-color-light
     border-radius: 5px 5px 0px 0px
-    .number
-      font-weight: bold
+  &.is-active
+    border-bottom: medium none
     .block-decorator
-      width: 100%
-      background-color: $secondary-color-light
-      border-radius: 5px 5px 0px 0px
-    &.is-active
-      border-bottom: medium none
-      .block-decorator
-        background-color: $neutral-color-light
+      background-color: $neutral-color-light
